--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">engWordLockScreen</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="word_insert">단어 등록</string>
+    <string name="word_list">단어 리스트</string>
+    <string name="idiom_insert">숙어 등록</string>
+    <string name="idiom_list">숙어 리스트</string>
+    <string name="settings">설정</string>
+    <string name="main_title">영어단어 잠금화면</string>
 </resources>
