--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="idiom_list">숙어 리스트</string>
     <string name="settings">설정</string>
     <string name="main_title">영어단어 잠금화면</string>
+    <string name="word_hint">이 곳에 단어를 입력하세요.</string>
+    <string name="mean_hint">이 곳에 뜻을 입력하세요.</string>
+    <string name="insert_word_mean">뜻 추가</string>
+    <string name="naver_dic_api">네이버 사전에서 찾기</string>
+    <string name="list_add">단어장에 추가</string>
 </resources>
