--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">engWordLockScreen</string>
+    <string name="app_name">영어단어 잠금화면</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="word_insert">단어 등록</string>
     <string name="word_list">단어 리스트</string>
@@ -20,4 +20,5 @@
     <string name="no">아니오</string>
     <string name="screen_off">무료 해제</string>
     <string name="permission_error_text">권한 거부로 잠금화면 기능을 이용하실 수 없습니다.\n 잠금화면을 사용하시려면 설정에서 권한 허용을 클릭해주세요.</string>
+    <string name="overlay_permission_btn_text">잠금화면 권한 허용 및 해제</string>
 </resources>
