리팩토링 커밋
1. MultiChoiceFragment 작성 중
   - GridView 작성 완료
   - 데이터 정상적으로 받아오는 것 실험 완료 (StateIn Default Value 주지 않는 것으로 결정)
   - TODO :: ViewModel에서 정답과 정답 카운트 수를 Flow로 관리하며 Fragment에서는 최초 값 주입과 관찰을 실행할 수 있도록 구조
   - TODO :: GridView 꾸미기

2. 패키지 위치 수정 및 일부 코드 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="screen_off">무료 해제</string>
     <string name="permission_error_text">권한 거부로 잠금화면 기능을 이용하실 수 없습니다.\n 잠금화면을 사용하시려면 설정에서 권한 허용을 클릭해주세요.</string>
     <string name="overlay_permission_btn_text">잠금화면 권한 허용 및 해제</string>
+    <string name="not_available_saved_word">저장된 영어단어가 없습니다.\n아래의 버튼을 통해 잠금화면을 해제해주세요.</string>
+    <string name="not_enough_quiz_data_text">퀴즈를 위한 충분한 데이터가 없습니다.\n아래의 버튼을 통해 잠금화면을 해제해주세요.</string>
 </resources>
