--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <!-- Word Insert Text -->
     <string name="insert_complete_text">%s 등록이 완료되었습니다.</string>
     <string name="insert_error_text">%s 등록에 오류가 발생했습니다.\n 다시 시도해주세요.</string>
+    <string name="add_insert_view_overflow_text">더 이상 추가하실 수 없습니다.</string>
 
     <!-- Permission Text -->
     <string name="permission_error_text">권한 거부로 잠금화면 기능을 이용하실 수 없습니다.\n 잠금화면을 사용하시려면 설정에서 권한 허용을 클릭해주세요.</string>
